Added an option to the DNS section of server templates for specifying the hostname to use in the primary NS record for new DNS domains, rather than the system's hostname.
Added script installers for phpScheduleIt, PHP-Calendar and Plans, and created a new script category for calendars.
Added an option to the Edit Reseller page to force all virtual servers he creates to be under a specified parent domain. Also updated the create-reseller.pl, modify-reseller.pl and list-resellers.pl scripts to edit and show this setting.
Added a page for creating multiple email aliases at once from a batch file, linked from the Mail Aliases list.
Updated the Batch Create Servers page to allow alias domains to be created, by specifying an extra field for the alias domain name.
Password changes to mail / FTP users from the Users and Groups modules now correctly update all the various passwords maintained by Virtualmin, such as MySQL and SVN - if the option to update in other modules is checked.
Added a script installer for Ruby on Rails. Unlike others, this does not setup a full working application - instead, it just installs the environment needed for developing Rails applications.
Added a script installer for Typo, which makes use of the Ruby on Rails framework but is a full blogging application.
Fixed a bug that can prevent per-domain PHP configurations from working when running PHP via CGI scripts.
Added the status of the Dovecot IMAP/POP3 server to the server status section of the right frame.
---- Changes since 3.43 ----
Added a script installer for the Textpattern Blog.
Added a script installer for Instiki, a Ruby on Rails Wiki.
Added a Module Config option to have MySQL users and permissions added to multiple servers, for use with replication or NDBCluster.
Updated Coppermine script installer to version 1.4.12, PhpWiki to 1.3.14, TextPattern to 4.0.5, and Mantis to 1.0.8.